2005-08-26  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/audioconvert.c: (if), (float),
	(audio_convert_get_func_index), (check_default),
	(audio_convert_clean_fmt), (audio_convert_prepare_context),
	(audio_convert_clean_context), (audio_convert_get_sizes),
	(get_temp_buffer), (audio_convert_convert):
	* gst/audioconvert/gstaudioconvert.c:
	(gst_audio_convert_parse_caps), (gst_audio_convert_get_unit_size),
	(gst_audio_convert_transform_caps),
	(gst_audio_convert_fixate_caps), (gst_audio_convert_transform):
	* gst/audioconvert/gstchannelmix.c: (gst_channel_mix_mix):
	Oops, allocate enough space to perform the channel mix.

2005-08-26  Wim Taymans  <wim@fluendo.com>

	* gst/audioconvert/Makefile.am:
	* gst/audioconvert/audioconvert.c: (if), (float),
	(audio_convert_get_func_index), (check_default),
	(audio_convert_clean_fmt), (audio_convert_prepare_context),
	(audio_convert_clean_context), (audio_convert_get_sizes),
	(get_temp_buffer), (audio_convert_convert):
	* gst/audioconvert/audioconvert.h:
	* gst/audioconvert/gstaudioconvert.c:
	(gst_audio_convert_class_init), (gst_audio_convert_init),
	(gst_audio_convert_dispose), (gst_audio_convert_parse_caps),
	(gst_audio_convert_get_unit_size),
	(gst_audio_convert_transform_caps),
	(gst_audio_convert_fixate_caps), (gst_audio_convert_set_caps),
	(gst_audio_convert_transform_ip), (gst_audio_convert_transform):
	* gst/audioconvert/gstaudioconvert.h:
	* gst/audioconvert/gstchannelmix.c: (gst_channel_mix_unset_matrix),
	(gst_channel_mix_fill_identical),
	(gst_channel_mix_fill_compatible), (gst_channel_mix_detect_pos),
	(gst_channel_mix_fill_one_other), (gst_channel_mix_fill_others),
	(gst_channel_mix_fill_normalize), (gst_channel_mix_fill_matrix),
	(gst_channel_mix_setup_matrix), (gst_channel_mix_passthrough),
	(gst_channel_mix_mix):
	* gst/audioconvert/gstchannelmix.h:
	Cleanups, librarify a bit, optimize, better negotiation and more.

2005-08-26  Jan Schmidt  <thaytan@mad.scientist.com>
